--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,9 @@ dependencies:
     - pip install --upgrade .
     - pip install --upgrade theano
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
+
+test:
+  override:
+    - python setup.py test
+    - python tests/integration/test_theano.py
+    - python tests/integration/test_tensorflow.py
