--- a/example/ALEEnvironment.yml
+++ b/example/ALEEnvironment.yml
@@ -5,5 +5,5 @@ args:
   sound: False
   frame_skip: 4
   color_averaging: False
-  random_start: 30
-  # This number of frames are played with action=0 at each reset.
+  random_start: 30 # This number of frames are played with action=0 at each reset.
+  mode: 'train' # Affects if loss of life is considered as terminal condition or not
