--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,12 @@
 dependencies:
+  cache_directories:
+    - "Arcade-Learning-Environment"
   override:
-    - pip install --upgrade .
+    - ./script/install_ale.sh
     - pip install --upgrade flake8
     - pip install --upgrade theano
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
-    - ./script/install_ale.sh
+    - pip install --upgrade .
     - python setup.py download_ale
 
 test:
