--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,15 @@
 dependencies:
   cache_directories:
     - "Arcade-Learning-Environment"
+    - "luchador/env/rom"
   override:
     - ./script/install_ale.sh
+    - ./script/download_atari_roms.sh "luchador/env/rom/atari"
     - pip install --upgrade flake8
     - pip install --upgrade theano
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
     - pip install --upgrade .
-    - python setup.py download_ale
+    
 
 test:
   override:
