--- a/circle.yml
+++ b/circle.yml
@@ -17,8 +17,8 @@ test:
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW python setup.py test
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC python setup.py test
     # integration test for ALEEnvironment
-    - python tests/integration/run_ale_env.py --mode test  --grayscale --frame_skip 1 --random_start 30
-    - python tests/integration/run_ale_env.py --mode train --color     --frame_skip 4 --random_start 0
+    - python tests/integration/run_ale_env.py --mode test  --grayscale --repeat_action 1 --random_start 30
+    - python tests/integration/run_ale_env.py --mode train --color     --repeat_action 4 --random_start 0
     # integration test for DQN
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW python tests/integration/run_dqn.py
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC python tests/integration/run_dqn.py
