Fix ALE rom not found error

--- a/example/ALEEnvironment.yml
+++ b/example/ALEEnvironment.yml
@@ -1,6 +1,6 @@
 name: ALEEnvironment
 args:
-  rom: breakout
+  rom: space_invaders
   display_screen: False
   play_sound: False
   repeat_action: 4
