--- a/tests/compatibility/optimizer/RMSProp_with_moment.yml
+++ b/tests/compatibility/optimizer/RMSProp_with_moment.yml
@@ -1,5 +1,6 @@
 name: RMSProp
 args:
+  learning_rate: 0.001
   decay: 0.95
-  momentum: 0.1
-  learning_rate: 0.0001
+  momentum: 0.5
+  epsilon: 0.01
