--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,8 @@ dependencies:
     - ./script/install_ale.sh
     - ./script/download_atari_roms.sh "luchador/env/rom/atari"
     - pip install --upgrade flake8
+    - pip install --upgrade coverage
+    - pip install --upgrade codeclimate-test-reporter
     - pip install --upgrade theano
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
     - pip install --upgrade .
@@ -13,14 +15,17 @@ dependencies:
 
 test:
   override:
-    # unit test
-    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW python setup.py test
-    - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC python setup.py test
-    # integration test for DQN
-    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW python tests/integration/run_dqn.py
-    - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC python tests/integration/run_dqn.py
+    # Unit test
+    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --source luchador    setup.py test
+    - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC coverage run --source luchador -a setup.py test
+    # Integration test
+    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --source luchador -a tests/integration/run_dqn.py
+    - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC coverage run --source luchador -a tests/integration/run_dqn.py
     # Optimizer compatibility test
     - ./tests/compatibility/test_optimizer_numerical_compatibility/run_optimizer_compatibility_tests.sh
     # Style check
     - flake8 luchador
     - flake8 tests
+  post:
+    # Report test coverage
+    - CODECLIMATE_REPO_TOKEN="${CODECLIMATE_REPO_TOKEN}" codeclimate-test-reporter
