--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,14 @@
+machine:
+  environment:
+    ROM_DIR: luchador/env/rom
 dependencies:
   cache_directories:
+    - ${ROM_DIR}
     - "Arcade-Learning-Environment"
-    - "luchador/env/rom"
   override:
+    - ./script/fix_urllib_sni.sh
     - ./script/install_ale.sh
-    - ./script/download_atari_roms.sh "luchador/env/rom/atari"
+    - ./script/download_atari_roms.sh "${ROM_DIR}/atari"
     - pip install --upgrade flake8
     - pip install --upgrade coverage
     - pip install --upgrade codeclimate-test-reporter
