--- a/circle.yml
+++ b/circle.yml
@@ -2,19 +2,22 @@ dependencies:
   cache_directories:
     - "luchador/env/rom"
     - "Arcade-Learning-Environment"
-  override:
+  pre:
     - ./script/fix_urllib_sni.sh
+    - sudo apt-get update && sudo apt-get install -y libhdf5-serial-dev g++ libopenblas-dev
+  override:
     - ./script/install_ale.sh
     - ./script/download_atari_roms.sh luchador/env/rom/atari
-    - pip install --upgrade flake8
-    - pip install --upgrade coverage
-    - pip install --upgrade codeclimate-test-reporter
+    - pip install --upgrade numpy
+    - pip install --upgrade scipy
     - pip install --upgrade theano
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
     - pip install --upgrade .
-    
 
 test:
+  pre:
+    - pip install --upgrade flake8
+    - pip install --upgrade coverage
   override:
     # Unit test
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --source luchador    setup.py test
@@ -29,4 +32,5 @@ test:
     - flake8 tests
   post:
     # Report test coverage
+    - pip install --upgrade codeclimate-test-reporter
     - CODECLIMATE_REPO_TOKEN="${CODECLIMATE_REPO_TOKEN}" codeclimate-test-reporter
