--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
     - ./script/download_atari_roms.sh luchador/env/rom/atari
     - pip install --upgrade numpy
     - pip install --upgrade scipy
-    - pip install --upgrade theano
+    - pip install --upgrade git+git://github.com/Theano/Theano.git
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
     - pip install --upgrade .
 
