Tweak runner and clean up some interfaces (#16)
* Add functionality to load external source

* Tweak DQN reporting

* Remove single quotation from example YAMLs

* Fix SummaryWriter Session device

--- a/example/DQNAgent_debug.yml
+++ b/example/DQNAgent_debug.yml
@@ -8,7 +8,7 @@ args:
     batch_size: &batch_size 32
 
   q_network_config:
-    model_name: 'vanilla_dqn'
+    model_name: vanilla_dqn
     parameter_file: null
     state_width: *state_width
     state_height: *state_height
@@ -26,7 +26,7 @@ args:
 
 
   optimizer_config:
-    name: 'NeonRMSProp'
+    name: NeonRMSProp
     args:
       decay: 0.95
       epsilon: 0.000001
@@ -56,7 +56,7 @@ args:
       output_dir: &output_dir results
       max_to_keep: 10
       keep_every_n_hours: 1.0
-      prefix: 'DQN'
+      prefix: DQN
 
   summary_config:
     # Summarize network every once after this #episodes
