Add Flappy Bird environment (#18)
* Move ALEEnv to dedicated sub directory

* Add FlappyBird environment

--- a/circle.yml
+++ b/circle.yml
@@ -1,20 +1,21 @@
 dependencies:
   cache_directories:
-    - "luchador/env/rom"
+    - "luchador/env/ale/rom"
     - "Arcade-Learning-Environment"
   pre:
-    - sudo apt-get update && sudo apt-get autoremove
+    - sudo apt-get update
     - ./script/install_dependencies.sh
     - ./script/fix_urllib_sni.sh
   override:
     - ./script/install_ale.sh
-    - ./script/download_atari_roms.sh luchador/env/rom/atari
+    - ./script/download_atari_roms.sh luchador/env/ale/rom
     - pip install --upgrade numpy
     - pip install --upgrade scipy
     - pip install --upgrade git+git://github.com/Theano/Theano.git
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp27-none-linux_x86_64.whl
     - pip install --upgrade .
   post:
+    - sudo apt-get autoremove
     - ./script/print_version.sh
 
 test:
