--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-env/
+# env/
 build/
 develop-eggs/
 dist/
@@ -80,7 +80,7 @@ celerybeat-schedule
 
 # virtualenv
 venv/
-ENV/
+# ENV/
 
 # Spyder project settings
 .spyderproject
