--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
+machine:
+  environment:
+    COUNT_INTEGRATION_COVERAGE: 'true'
+
 dependencies:
   cache_directories:
     - "luchador/env/ale/rom"
@@ -13,7 +17,8 @@ dependencies:
     - pip install --upgrade scipy
     - pip install --upgrade git+git://github.com/Theano/Theano.git
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.11.0rc0-cp27-none-linux_x86_64.whl
-    - pip install --upgrade .
+    # Install luchador in editable mode so that coverage.py can collect data in integration tests
+    - pip install --upgrade -e .
   post:
     - sudo apt-get autoremove
     - ./script/print_version.sh
@@ -22,23 +27,22 @@ test:
   pre:
     - pip install --upgrade flake8
     - pip install --upgrade coverage
+    - coverage erase
     - mkdir -p tmp
   override:
-    # Unit test
-    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --source luchador    setup.py test
+    # Unit tests
+    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --source luchador -a setup.py test
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC coverage run --source luchador -a setup.py test
-    # DQN Integration test
+    # Integration tests
+    - ./tests/integration/run_serialization_tests.sh
+    - ./tests/integration/run_layer_numerical_compatibility_tests.sh
+    - ./tests/integration/run_optimizer_numerical_compatibility_tests.sh
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW ./tests/integration/run_dqn.sh
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC ./tests/integration/run_dqn.sh
-    # Neural Network Optimizer compatibility test
-    - ./tests/integration/run_layer_numerical_compatibility_tests.sh
-    # Neural Network Serialization compatibility test
-    - ./tests/integration/run_serialization_tests.sh
-    # Neural Network Optimizer compatibility test
-    - ./tests/integration/run_optimizer_numerical_compatibility_tests.sh
     # Style check
     - flake8 luchador
     - flake8 tests
   post:
     # Report test coverage
+    - coverage html -d "${CIRCLE_ARTIFACTS}/coverage"
     - if [[ "$CIRCLE_PROJECT_USERNAME" -eq "mthrok" ]]; then ./script/report_codeclimate_test_coverage.sh; fi
