--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,11 @@ venv/
 # MacOSX
 .DS_Store
 
-# monitoring
-monitoring
+# MNIST data used for test data creation
+tool/mnist.pkl*
 
 # profiling
 *.cprof
+
+# Artifacts from integration test data
+tmp
