--- a/tests/integration/data/layer/conv2d_without_bias/config.yml
+++ b/tests/integration/data/layer/conv2d_without_bias/config.yml
@@ -6,5 +6,6 @@ layer:
     filter_height: 7
     filter_width: 5
     n_filters: 3
-    strides: 1
-    padding: SAME
+    strides: 3
+    padding: 'VALID'
+    with_bias: False
