--- a/tests/integration/data/optimizer/Adam.yml
+++ b/tests/integration/data/optimizer/Adam.yml
@@ -1,6 +1,6 @@
-name: AdamOptimizer
+name: Adam
 args:
   learning_rate: 0.001
   beta1: 0.9
   beta2: 0.999
-  epsilon: 0.00000001
+  epsilon: !!float 1e-8
