--- a/circle.yml
+++ b/circle.yml
@@ -35,6 +35,7 @@ test:
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC coverage run --source luchador -a setup.py test
     # Integration tests
     - ./tests/integration/run_serialization_tests.sh
+    - ./tests/integration/run_initializer_compatibility_test.sh
     - ./tests/integration/run_layer_numerical_compatibility_tests.sh
     - ./tests/integration/run_optimizer_numerical_compatibility_tests.sh
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW ./tests/integration/run_dqn.sh
