--- a/tests/integration/data/initializer/xavier_uniform.yml
+++ b/tests/integration/data/initializer/xavier_uniform.yml
@@ -10,10 +10,6 @@ compare_config:
   threshold: 0.03
   mean: 0.0
   std: 0.1443
-  # Standard deviation here is not that of normal distribution, but of truncated normal distribution
-  # with bound of `2 * standard deviation of normal distribution`.
-  # To get this you can use scipy.stats.truncnorm class.
-  #
   # fan_in, fan_out = 64, 32
-  # scale = np.sqrt(6. / (fan_in + fan_out))
+  # stddev = np.sqrt(1. / fan_average)
   # std = (scale + scale) / sqrt(12)
