--- a/tests/integration/data/initializer/xavier_conv2d_uniform.yml
+++ b/tests/integration/data/initializer/xavier_conv2d_uniform.yml
@@ -10,11 +10,6 @@ compare_config:
   threshold: 0.03
   mean: 0.0
   std: 0.01804
-  # Standard deviation here is not that of normal distribution, but of truncated normal distribution
-  # with bound of `2 * standard deviation of normal distribution`.
-  # To get this you can use scipy.stats.truncnorm class.
-  #
   # fan_out = 64 * 8 * 8
   # fan_in = 32 * 8 * 8
-  # scale = np.sqrt(6. / (fan_in + fan_out))
-  # std = (scale + scale) / sqrt(12)
+  # stddev = np.sqrt(1. / fan_average)
