--- a/tests/integration/data/initializer/xavier_normal.yml
+++ b/tests/integration/data/initializer/xavier_normal.yml
@@ -7,14 +7,8 @@ test_config:
   shape: [1000, 100]
 
 compare_config:
-  threshold: 0.1
+  threshold: 0.03
   mean: 0.0
-  std: 0.03984
-  # Standard deviation here is not that of normal distribution, but of truncated normal distribution
-  # with bound of `2 * standard deviation of normal distribution`.
-  # To get this you can use scipy.stats.tnorm class.
-  #
+  std: 0.04276
   # fan_in, fan_out = 1000, 100
-  # scale = np.sqrt(3. / (fan_in + fan_out))
-  # variance = tnorm.stats(-2, 2, scale=scale, moments='v')
-  # std = np.sqrt(variance)
+  # stddev = np.sqrt(1. / fan_average)
