--- a/circle.yml
+++ b/circle.yml
@@ -31,13 +31,14 @@ test:
     - mkdir -p tmp
   override:
     # Unit tests
-    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --source luchador -a setup.py test
-    - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC coverage run --source luchador -a setup.py test
+    - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW coverage run --parallel-mode setup.py test
+    - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC coverage run --parallel-mode setup.py test
     # Integration tests
     - ./tests/integration/run_serialization_tests.sh
     - ./tests/integration/run_initializer_compatibility_test.sh
     - ./tests/integration/run_layer_numerical_compatibility_tests.sh
     - ./tests/integration/run_optimizer_numerical_compatibility_tests.sh
+    - ./tests/integration/test_server_client/run_server_client.sh
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW ./tests/integration/run_dqn.sh
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC ./tests/integration/run_dqn.sh
     # Style check
