Make environment impor lazy (#84)
Some environments depend on dynamic library, and importing all of them at global initialization leads to TLS Error on Ubuntu 14.04.
TLS Error is avoidable only by upgrading underlying libc version, which is not easy.
So we import such environments on-demand.

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ dependencies:
     - "Arcade-Learning-Environment"
   pre:
     - sudo apt-get update
+    - git fetch --unshallow origin || true
     - ./cci_script/install_dependencies.sh
     - ./cci_script/fix_urllib_sni.sh
   override:
