Refactor recorder into configurable ones (#116)
* Add customizable recorder

* Use recorder2 in DQN

* Increaset test time limit

* Remove old recorder implementation and fix tests

* Add docstrings

--- a/example/DQNAgent_debug.yml
+++ b/example/DQNAgent_debug.yml
@@ -1,18 +1,36 @@
+alias:
+  width: &width 84
+  height: &height 84
+  stack: &stack 4
+  batch: &batch 32
+
 name: DQNAgent
 args:
   recorder_config:
     memory_size: 1000000
-    state_width: &state_width 84
-    state_height: &state_height 84
-    state_length: &state_length 4
-    batch_size: &batch_size 32
+    batch_size: *batch
+    buffer_config:
+      state:
+        shape:
+          - *height
+          - *width
+        dtype: uint8
+        stack: *stack
+        transition: 2
+      action:
+        dtype: uint8
+      reward:
+        dtype: float
+      terminal:
+        dtype: bool
+
 
   q_network_config:
     model_name: vanilla_dqn
     parameter_file: null
-    state_width: *state_width
-    state_height: *state_height
-    state_length: *state_length
+    state_width: *width
+    state_height: *height
+    state_length: *stack
     args:
       discount_rate: 0.99
       # Divide reward befor clipping
@@ -47,7 +65,7 @@ args:
 
     # Sync networks every this number of observationa are made
     sync_frequency: 20
-    n_samples: *batch_size
+    n_samples: *batch
 
   save_config:
     # Save network parameter every once after this #trainings
