--- a/circle.yml
+++ b/circle.yml
@@ -28,7 +28,7 @@ test:
   pre:
     - pip install --upgrade flake8
     - pip install --upgrade coverage
-    - coverage erase
+    - coverage erase && rm -rf .coverage.*
     - mkdir -p tmp
   override:
     # Unit tests
