Add manager server (#131)
* Add manager server

--- a/circle.yml
+++ b/circle.yml
@@ -40,6 +40,7 @@ test:
     - ./tests/integration/run_layer_numerical_compatibility_tests.sh
     - ./tests/integration/run_optimizer_numerical_compatibility_tests.sh
     - ./tests/integration/test_server_client/run_server_client.sh
+    - ./tests/integration/test_server_client/run_manager_server.sh
     - ./tests/integration/run_envs.sh
     - LUCHADOR_NN_BACKEND=theano     LUCHADOR_NN_CONV_FORMAT=NCHW ./tests/integration/run_dqn.sh
     - LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC ./tests/integration/run_dqn.sh
