Unify DQN Implementation (#151)
* Unify DQN code

* Remove old dqn module

* Move optimizer from agent to DQN

* Use nn.make_model for building model

* Use StoreMixin in DQNAgent

* Refactor QL module

--- a/example/DQNAgent_test.yml
+++ b/example/DQNAgent_test.yml
@@ -3,6 +3,9 @@ alias:
   height: &height 84
   stack: &stack 4
   batch: &batch 32
+  save_dir: &save_dir results
+  save_prefix: &save_prefix DQN_integration_test
+  initial_parameter: &initial_parameter example/space_invaders_vanilla_dqn_99000.h5
 
 name: DQNAgent
 args:
@@ -25,32 +28,54 @@ args:
         dtype: bool
 
   q_network_config:
-    model_name: example/vanilla_dqn.yml
-    parameter_file: example/space_invaders_vanilla_dqn_99000.h5
-    state_width: *width
-    state_height: *height
-    state_length: *stack
-    args:
+    model_config:
+      name: example/vanilla_dqn.yml
+      initial_parameter: *initial_parameter
+      input_channel: *stack
+      input_height: *height
+      input_width: *width
+    q_learning_config:
       discount_rate: 0.99
       # reward is clipped between the following min and max
       min_reward: -1.0
       max_reward: 1.0
-      # error between predicted Q value and target Q value is clipped by the following min and max
-      min_delta: -1.0
-      max_delta: 1.0
+    cost_config:
+      name: SSE2
+      args:
+        # error between predicted Q value and target Q value is clipped by the following min and max
+        min_delta: -1.0
+        max_delta: 1.0
+    optimizer_config:
+      name: NeonRMSProp
+      args:
+        decay: 0.95
+        epsilon: 0.000001
+        learning_rate: 0.00025
+    saver_config:
+      output_dir: *save_dir
+      max_to_keep: 10
+      keep_every_n_hours: 1.0
+      prefix: *save_prefix
+    summary_writer_config:
+      output_dir: *save_dir
+    session_config:
+      parameter_file: *initial_parameter
 
-  optimizer_config:
-    name: NeonRMSProp
-    args:
-      decay: 0.95
-      epsilon: 0.000001
-      learning_rate: 0.00025
+  save_config:
+    # Save network parameter every once after this #trainings
+    # Giving non-positive value effectively disable save functionality
+    interval: -1
+
+  summary_config:
+    # Summarize network every once after this #trainings
+    # Giving non-positive value effectively disable save functionality
+    interval: -1
 
   action_config:
-    annealing_method: linear
-    exploration_period: 0
-    initial_exploration_rate: 0.05
-    terminal_exploration_rate: 0.05
+    method: linear
+    duration: 0
+    epsilon_init: 0.05
+    epsilon_term: 0.05
 
   training_config:
     # Training starts after this number of transitions are recorded
@@ -61,20 +86,3 @@ args:
     # Sync networks every this number of observations are made
     sync_frequency: 10000
     n_samples: *batch
-
-  save_config:
-    # Save network parameter every once after this #trainings
-    # Giving non-positive value effectively disable save functionality
-    interval: -1
-    saver_config:
-      output_dir: &output_dir results
-      max_to_keep: 10
-      keep_every_n_hours: 1.0
-      prefix: DQN
-
-  summary_config:
-    # Summarize network every once after this #trainings
-    # Giving non-positive value effectively disable save functionality
-    interval: -1
-    writer_config:
-      output_dir: *output_dir
