--- a/example/DQNAgent_train.yml
+++ b/example/DQNAgent_train.yml
@@ -3,6 +3,9 @@ alias:
   height: &height 84
   stack: &stack 4
   batch: &batch 32
+  save_dir: &save_dir results
+  save_prefix: &save_prefix DQN
+  initial_parameter: &initial_parameter null
 
 name: DQNAgent
 args:
@@ -25,32 +28,52 @@ args:
         dtype: bool
 
   q_network_config:
-    model_name: vanilla_dqn
-    parameter_file: null
-    state_width: *width
-    state_height: *height
-    state_length: *stack
-    args:
+    model_config:
+      name: vanilla_dqn
+      initial_parameter: *initial_parameter
+      input_channel: *stack
+      input_height: *height
+      input_width: *width
+    q_learning_config:
       discount_rate: 0.99
       # reward is clipped between the following min and max
       min_reward: -1.0
       max_reward: 1.0
-      # error between predicted Q value and target Q value is clipped by the following min and max
-      min_delta: -1.0
-      max_delta: 1.0
+    cost_config:
+      name: SSE2
+      args:
+        # error between predicted Q value and target Q value is clipped by the following min and max
+        min_delta: -1.0
+        max_delta: 1.0
+    optimizer_config:
+      name: NeonRMSProp
+      args:
+        decay: 0.95
+        epsilon: 0.000001
+        learning_rate: 0.00025
+    saver_config:
+      output_dir: *save_dir
+      max_to_keep: 10
+      keep_every_n_hours: 0.5
+      prefix: *save_prefix
+    summary_writer_config:
+      output_dir: *save_dir
 
-  optimizer_config:
-    name: NeonRMSProp
-    args:
-      decay: 0.95
-      epsilon: 0.000001
-      learning_rate: 0.00025
+  save_config:
+    # Save network parameter every once after this #trainings
+    # Giving non-positive value effectively disable save functionality
+    interval: 250000
 
+  summary_config:
+    # Summarize network every once after this #trainings
+    # Giving non-positive value effectively disable save functionality
+    interval: 50000
+    
   action_config:
-    annealing_method: linear
-    exploration_period: 1000000
-    initial_exploration_rate: 1.0
-    terminal_exploration_rate: 0.1
+    method: linear
+    duration: 1000000
+    epsilon_init: 1.0
+    epsilon_term: 0.1
 
   training_config:
     # Training starts after this number of transitions are recorded
@@ -61,20 +84,3 @@ args:
     # Sync networks every this number of observations are made
     sync_frequency: 10000
     n_samples: *batch
-
-  save_config:
-    # Save network parameter every once after this #trainings
-    # Giving non-positive value effectively disable save functionality
-    interval: 250000
-    saver_config:
-      output_dir: &output_dir results
-      max_to_keep: 10
-      keep_every_n_hours: 0.5
-      prefix: DQN
-
-  summary_config:
-    # Summarize network every once after this #trainings
-    # Giving non-positive value effectively disable save functionality
-    interval: 50000
-    writer_config:
-      output_dir: *output_dir
