--- a/luchador/nn/model/data/vanilla_dqn.yml
+++ b/luchador/nn/model/data/vanilla_dqn.yml
@@ -1,59 +1,64 @@
 model_type: Sequential
+input:
+  dtype: uint8
+  shape: {input_shape}
+  name: state
 layer_configs:
-- scope: layer0/preprocessing
-  layer:
-    name: TrueDiv
-    args:
-      denom: 255
-- scope: layer1/conv2D
-  layer:
-    name: Conv2D
-    args:
-      n_filters: 32
-      filter_width: 8
-      filter_height: 8
-      strides: 4
-      padding: valid
-- scope: layer1/ReLU
-  layer:
-    name: ReLU
-- scope: layer2/conv2D
-  layer:
-    name: Conv2D
-    args:
-      n_filters: 64
-      filter_width: 4
-      filter_height: 4
-      strides: 2
-      padding: valid
-- scope: layer2/ReLU
-  layer:
-    name: ReLU
-- scope: layer3/conv2D
-  layer:
-    name: Conv2D
-    args:
-      filter_width: 3
-      filter_height: 3
-      n_filters: 64
-      strides: 1
-      padding: valid
-- scope: layer3/ReLU
-  layer:
-    name: ReLU
-- scope: layer4/flatten
-  layer:
-    name: Flatten
-- scope: layer5/dense
-  layer:
-    name: Dense
-    args:
-      n_nodes: 512
-- scope: layer5/ReLU
-  layer:
-    name: ReLU
-- scope: layer6/dense
-  layer:
-    name: Dense
-    args:
-      n_nodes: {n_actions}
+  - scope: layer0/preprocessing
+    layer:
+      name: TrueDiv
+      args:
+        denom: 255
+        dtype: uint8
+  - scope: layer1/conv2D
+    layer:
+      name: Conv2D
+      args:
+        n_filters: 32
+        filter_width: 8
+        filter_height: 8
+        strides: 4
+        padding: valid
+  - scope: layer1/ReLU
+    layer:
+      name: ReLU
+  - scope: layer2/conv2D
+    layer:
+      name: Conv2D
+      args:
+        n_filters: 64
+        filter_width: 4
+        filter_height: 4
+        strides: 2
+        padding: valid
+  - scope: layer2/ReLU
+    layer:
+      name: ReLU
+  - scope: layer3/conv2D
+    layer:
+      name: Conv2D
+      args:
+        filter_width: 3
+        filter_height: 3
+        n_filters: 64
+        strides: 1
+        padding: valid
+  - scope: layer3/ReLU
+    layer:
+      name: ReLU
+  - scope: layer4/flatten
+    layer:
+      name: Flatten
+  - scope: layer5/dense
+    layer:
+      name: Dense
+      args:
+        n_nodes: 512
+  - scope: layer5/ReLU
+    layer:
+      name: ReLU
+  - scope: layer6/dense
+    layer:
+      name: Dense
+      args:
+        n_nodes: {n_actions}
