--- a/tests/integration/data/dqn/DQNAgent_train.yml
+++ b/tests/integration/data/dqn/DQNAgent_train.yml
@@ -3,6 +3,9 @@ alias:
   height: &height 84
   stack: &stack 4
   batch: &batch 32
+  save_dir: &save_dir tmp/test_dqn
+  save_prefix: &save_prefix DQN_integration_test
+  initial_parameter: &initial_parameter tests/integration/data/dqn/dqn_integration_test_initial.h5
 
 name: DQNAgent
 args:
@@ -25,32 +28,44 @@ args:
         dtype: bool
 
   q_network_config:
-    model_name: vanilla_dqn
-    parameter_file: tests/integration/data/dqn/dqn_integration_test_initial.h5
-    state_width: *width
-    state_height: *height
-    state_length: *stack
-    args:
+    model_config:
+      name: vanilla_dqn
+      initial_parameter: *initial_parameter
+      input_channel: *stack
+      input_height: *height
+      input_width: *width
+    q_learning_config:
       discount_rate: 0.99
       # reward is clipped between the following min and max
       min_reward: -1.0
       max_reward: 1.0
-      # error between predicted Q value and target Q value is clipped by the following min and max
-      min_delta: -1.0
-      max_delta: 1.0
-
-  optimizer_config:
-    name: RMSProp
-    args:
-      decay: 0.95
-      epsilon: 0.000001
-      learning_rate: 0.00025
+    cost_config:
+      name: SSE2
+      args:
+        # error between predicted Q value and target Q value is clipped by the following min and max
+        min_delta: -1.0
+        max_delta: 1.0
+    optimizer_config:
+      name: RMSProp
+      args:
+        decay: 0.95
+        epsilon: 0.000001
+        learning_rate: 0.00025
+    saver_config:
+      output_dir: *save_dir
+      max_to_keep: 10
+      keep_every_n_hours: 1.0
+      prefix: *save_prefix
+    summary_writer_config:
+      output_dir: *save_dir
+    session_config:
+      parameter_file: *initial_parameter
 
   action_config:
-    annealing_method: linear
-    exploration_period: 1000
-    initial_exploration_rate: 0.5
-    terminal_exploration_rate: 0.5
+    epsilon_init: 0.5
+    epsilon_term: 0.5
+    duration: 1000
+    method: linear
 
   training_config:
     # Training starts after this number of transitions are recorded
@@ -66,15 +81,8 @@ args:
     # Save network parameter every once after this #trainings
     # Giving non-positive value effectively disable save functionality
     interval: 100
-    saver_config:
-      output_dir: &output_dir tmp/test_dqn/
-      max_to_keep: 10
-      keep_every_n_hours: 1.0
-      prefix: DQN_integration_test
 
   summary_config:
     # Summarize network every once after this #trainings
     # Giving non-positive value effectively disable save functionality
     interval: 100
-    writer_config:
-      output_dir: *output_dir
