Add get_tensor mechanism (#156)
* Add get_tensor mechanism

* Tweak utilities

* Introduce BaseWrapper

To put Tensor/Variable storing mechanism in nn.base module,
BaseVariable and BaseTensor classes are introduced.

* Stab Theano version temporarily

Theano is broken at their `master` branch

--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
     - ./cci_script/download_atari_roms.sh luchador/env/ale/rom
     - pip install --upgrade numpy
     - pip install --upgrade scipy
-    - pip install --upgrade git+git://github.com/Theano/Theano.git
+    - pip install --upgrade git+git://github.com/Theano/Theano.git@rel-0.9.0beta1
     - pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.12.1-cp27-none-linux_x86_64.whl
     # Install luchador in editable mode so that coverage.py can collect data in integration tests
     - pip install --upgrade -e .
