Refactor model module (#159)
* Refactor sequential model

* Add Input type

--- a/luchador/nn/model/data/vanilla_dqn.yml
+++ b/luchador/nn/model/data/vanilla_dqn.yml
@@ -1,8 +1,10 @@
 model_type: Sequential
 input:
-  dtype: uint8
-  shape: {input_shape}
-  name: state
+  name: Input
+  args:
+    dtype: uint8
+    shape: {input_shape}
+    name: state
 layer_configs:
   - scope: layer0/preprocessing
     layer:
